- Create the Load Default Image to test with default images from the project;

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,8 @@
     <string name="low_quality_url">Low Quality URL</string>
     <string name="high_quality_url">High Quality URL</string>
     <string name="leave_empty_to_default_test">Leave empty to get the default test</string>
-    <string name="load_images">Load Images</string>
+    <string name="load_custom_images">Custom Images</string>
+    <string name="load_default_images">Default Images</string>
 
     <string name="content_description_low_to_high">Image that will load low quality before high quality</string>
     <string name="content_description_blured_background">Background image that will be blured</string>
