--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,16 @@
 <resources>
     <string name="app_name">Picasso Utils</string>
 
-    <string name="low_quality_url">Low Quality URL</string>
-    <string name="high_quality_url">High Quality URL</string>
-    <string name="leave_empty_to_default_test">Leave empty to get the default test</string>
     <string name="load_custom_images">Custom Images</string>
     <string name="load_default_images">Default Images</string>
+
+    <string name="thumbnail_url">Thumbnail URL</string>
+    <string name="high_quality_url">High Quality URL</string>
+    <string name="background_url">Background URL</string>
+
+    <string name="empty_field">This field must not be empty</string>
+    <string name="load_image">Load Images</string>
+    <string name="cancel">Cancel</string>
 
     <string name="content_description_low_to_high">Image that will load low quality before high quality</string>
     <string name="content_description_blured_background">Background image that will be blured</string>
